--- a/index.html
+++ b/index.html
@@ -87,42 +87,42 @@
 
         			<p class="ls-l sliderText" style="top: 50px; left: 550px;"
         				data-ls="offsetxin: 0; offsetxout : 0; offsetyin: 50; durationin: 2000;">
-        			<span>U.N.I</span> <br>iPhone Mobile App.</p>
+        			<span>U.N.I</span> <br>Social Mobile App.</p>
 
-        			<a href="#featureContainer" class="buttonBig ls-l" style="top: 300px; left: 550px;"
+        			<a href="#featureContainer" class="buttonBig ls-l" style="top: 240px; left: 550px;"
         				data-ls="offsetxin: 0; offsetxout: 0; delayin: 300; offsetyin: 100; durationin: 2000;">LEARN MORE</a>
 
-        			<a href="#getappContainer" class="buttonBig ls-l" style="top: 300px; left: 750px;"
+        			<a href="#getappContainer" class="buttonBig ls-l" style="top: 240px; left: 750px;"
         				data-ls="offsetxin: 0; offsetxout: 0; delayin: 300; offsetyin: 100; durationin: 2000;"> GET APP</a>
 			    </div>
 			    <!-- second slide -->
 			    <div class="ls-slide">
-	        		<img src="assets/images/slider2.png" alt="Phone" class="ls-l" style="top: -40px; left: 0; width: 559px;"
+	        		<img src="assets/images/slider2.png" alt="Phone" class="ls-l" style="top: -90px; left: 0; width: 559px;"
 	        			data-ls="offsetxin: 0; offsetxout : 0; offsetyin: 100; durationin: 2000" />
 
         			<p class="ls-l sliderText" style="top: 50px; left: 550px;"
         				data-ls="offsetxin: 0; offsetxout : 0; offsetyin: 50; durationin: 2000;">
         			<span>Social</span><br/>features inside!</p>
 
-        			<a href="#featureContainer" class="buttonBig ls-l" style="top: 300px; left: 550px;"
+        			<a href="#featureContainer" class="buttonBig ls-l" style="top: 250px; left: 550px;"
         				data-ls="offsetxin: 0; offsetxout: 0; delayin: 300; offsetyin: 100; durationin: 2000;">LEARN MORE</a>
 
-        			<a href="#getappContainer" class="buttonBig ls-l" style="top: 300px; left: 750px;"
+        			<a href="#getappContainer" class="buttonBig ls-l" style="top: 250px; left: 750px;"
         				data-ls="offsetxin: 0; offsetxout: 0; delayin: 300; offsetyin: 100; durationin: 2000;"> GET APP</a>
 			    </div>
 			    <!-- third slide -->
 			    <div class="ls-slide">
-	        		<img src="assets/images/slider3.png" alt="Phone" class="ls-l" style="top: 0px; left: 0; width: 586px;"
+	        		<img src="assets/images/slider3.png" alt="Phone" class="ls-l" style="top: -40px; left: 0; width: 586px;"
 	        			data-ls="offsetxin: 0; offsetxout : 0; offsetyin: 100; rotatein: 0; durationin: 2000" />
 
         			<p class="ls-l sliderText" style="top: 50px; left: 550px;"
         				data-ls="offsetxin: 0; offsetxout : 0; offsetyin: 50; durationin: 2000;">
         			<span>12+ Pages</span><br/>36+ PSDs</p>
 
-        			<a href="#featureContainer" class="buttonBig ls-l" style="top: 300px; left: 550px;"
+        			<a href="#featureContainer" class="buttonBig ls-l" style="top: 250px; left: 550px;"
         				data-ls="offsetxin: 0; offsetxout: 0; delayin: 300; offsetyin: 100; durationin: 2000;">LEARN MORE</a>
 
-        			<a href="#getappContainer" class="buttonBig ls-l" style="top: 300px; left: 750px;"
+        			<a href="#getappContainer" class="buttonBig ls-l" style="top: 250px; left: 750px;"
         				data-ls="offsetxin: 0; offsetxout: 0; delayin: 300; offsetyin: 100; durationin: 2000;"> GET APP</a>
 
 			    </div>
